# kdkp-api-starter-code

./: .env.example  README.md  docling_usage.py  dots_ocr.py  embeddings_api.py  gemma4.py  glm-ocr.py  llm.py  llm_structured_output.py  llm_tool_use.py  pydantic_model.py  pyproject.toml  qwen3_5.py  renovate.json  reranker_api.py  whisper_api.py
utils/: dots_ocr_utils.py  get_model.py  ocr_prompts.py
