[project]
name = "kdm-api-starter-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bentoml>=1.3.16",
    "openai>=1.58.1",
    "truststore>=0.10.1",
    "PyMuPDF>=1.26.5",
    "pillow>=12.0.0",
    "requests>=2.32.5",
]
